temp break on problem 3

--- a/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 203,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -756,23 +756,24 @@
     "    else:\n",
     "        right_path.append(rootNode.key)\n",
     "\n",
-    "    print(f\"root.node: {rootNode.key}, root.depth: {rootNode.depth}, root.right: {rootNode.right}\")\n",
+    "    print(f\"root.node: {rootNode.key}, root.depth: {rootNode.depth}\")\n",
     "    if rootNode.depth == 0:\n",
     "        right_path.append(rootNode.self.right)\n",
     "\n",
+    "    print(f\"left_path: {left_path}, right_path: {right_path}\")\n",
     "    # return the longest path\n",
     "    if len(left_path) > len(right_path):\n",
-    "        print(left_path)\n",
+    "        print(\"Return left_path\")\n",
     "        return left_path\n",
     "    \n",
-    "    print(right_path)\n",
+    "    print(\"Return right_path\")\n",
     "    return right_path\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 204,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -794,26 +795,36 @@
      "output_type": "stream",
      "text": [
       "-- Test 1 --\n",
-      "root.node: 70, root.depth: 1, root.right: None\n",
-      "[70]\n",
-      "root.node: 51, root.depth: 1, root.right: None\n",
-      "[51]\n",
-      "root.node: 50, root.depth: 2, root.right: <__main__.TreeNode object at 0x0000021C5389A800>\n",
-      "[51, 50]\n",
-      "root.node: 52, root.depth: 3, root.right: None\n",
-      "[51, 50, 52]\n",
-      "root.node: 43, root.depth: 1, root.right: None\n",
-      "[43]\n",
-      "root.node: 47, root.depth: 4, root.right: <__main__.TreeNode object at 0x0000021C5389B220>\n",
-      "[51, 50, 52, 47]\n",
-      "root.node: 10, root.depth: 1, root.right: None\n",
-      "[10]\n",
-      "root.node: 20, root.depth: 2, root.right: None\n",
-      "[10, 20]\n",
-      "root.node: 40, root.depth: 5, root.right: <__main__.TreeNode object at 0x0000021C5389ACB0>\n",
-      "[51, 50, 52, 47, 40]\n",
-      "root.node: 55, root.depth: 6, root.right: <__main__.TreeNode object at 0x0000021C5389B3D0>\n",
-      "[51, 50, 52, 47, 40, 55]\n",
+      "root.node: 70, root.depth: 1\n",
+      "left_path: [], right_path: [70]\n",
+      "Return right_path\n",
+      "root.node: 51, root.depth: 1\n",
+      "left_path: [], right_path: [51]\n",
+      "Return right_path\n",
+      "root.node: 50, root.depth: 2\n",
+      "left_path: [], right_path: [51, 50]\n",
+      "Return right_path\n",
+      "root.node: 52, root.depth: 3\n",
+      "left_path: [51, 50, 52], right_path: []\n",
+      "Return left_path\n",
+      "root.node: 43, root.depth: 1\n",
+      "left_path: [], right_path: [43]\n",
+      "Return right_path\n",
+      "root.node: 47, root.depth: 4\n",
+      "left_path: [43], right_path: [51, 50, 52, 47]\n",
+      "Return right_path\n",
+      "root.node: 10, root.depth: 1\n",
+      "left_path: [], right_path: [10]\n",
+      "Return right_path\n",
+      "root.node: 20, root.depth: 2\n",
+      "left_path: [10, 20], right_path: []\n",
+      "Return left_path\n",
+      "root.node: 40, root.depth: 5\n",
+      "left_path: [10, 20], right_path: [51, 50, 52, 47, 40]\n",
+      "Return right_path\n",
+      "root.node: 55, root.depth: 6\n",
+      "left_path: [51, 50, 52, 47, 40, 55], right_path: [70]\n",
+      "Return left_path\n",
       "[51, 50, 52, 47, 40, 55]\n"
      ]
     },
@@ -824,7 +835,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[200], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m path_len \u001b[39m=\u001b[39m getLongestPathLength(r)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(path_len)\n\u001b[1;32m---> 13\u001b[0m \u001b[39massert\u001b[39;00m path_len \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpassed\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 2 --\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[204], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m path_len \u001b[39m=\u001b[39m getLongestPathLength(r)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(path_len)\n\u001b[1;32m---> 13\u001b[0m \u001b[39massert\u001b[39;00m path_len \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpassed\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 2 --\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
