--- a/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 207,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -750,17 +750,19 @@
     "    # recurse down left path\n",
     "    left_path = getLongestPathLength(rootNode.left)\n",
     "\n",
+    "    print(f\"root.node: {rootNode.key}, root.depth: {rootNode.depth}\")\n",
+    "    print(f\"left_path: {left_path}, right_path: {right_path}\")\n",
+    "    if (len(left_path) > len(right_path)) & (rootNode.depth < (len(left_path) + len(right_path))):\n",
+    "        print(\"Cross over\")\n",
+    "        right_path.append(rootNode.self.right)\n",
+    "\n",
     "    # compare the lengths of each sub path and add the longer\n",
     "    if len(left_path) > len(right_path):\n",
     "        left_path.append(rootNode.key)\n",
     "    else:\n",
     "        right_path.append(rootNode.key)\n",
     "\n",
-    "    print(f\"root.node: {rootNode.key}, root.depth: {rootNode.depth}\")\n",
-    "    if rootNode.depth == 0:\n",
-    "        right_path.append(rootNode.self.right)\n",
     "\n",
-    "    print(f\"left_path: {left_path}, right_path: {right_path}\")\n",
     "    # return the longest path\n",
     "    if len(left_path) > len(right_path):\n",
     "        print(\"Return left_path\")\n",
@@ -773,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 206,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -835,7 +837,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[204], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m path_len \u001b[39m=\u001b[39m getLongestPathLength(r)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(path_len)\n\u001b[1;32m---> 13\u001b[0m \u001b[39massert\u001b[39;00m path_len \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpassed\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 2 --\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[206], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m path_len \u001b[39m=\u001b[39m getLongestPathLength(r)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(path_len)\n\u001b[1;32m---> 13\u001b[0m \u001b[39massert\u001b[39;00m path_len \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpassed\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 2 --\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
