--- a/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 234,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -740,21 +740,25 @@
     "    # rootNode is an instance of the TreeNode class\n",
     "    # The function must return the longest path length\n",
     "    # your code here\n",
-    "    \n",
+    "    return len(calcLongestPathLength(rootNode))\n",
+    "\n",
+    "def calcLongestPathLength(rootNode):\n",
+    "\n",
     "    if(rootNode == None):\n",
     "        return []\n",
     "    \n",
     "    # recurse down right path\n",
-    "    right_path = getLongestPathLength(rootNode.right)\n",
+    "    right_path = calcLongestPathLength(rootNode.right)\n",
     "\n",
     "    # recurse down left path\n",
-    "    left_path = getLongestPathLength(rootNode.left)\n",
+    "    left_path = calcLongestPathLength(rootNode.left)\n",
     "\n",
     "    print(f\"root.node: {rootNode.key}, root.depth: {rootNode.depth}\")\n",
     "    print(f\"left_path: {left_path}, right_path: {right_path}\")\n",
-    "    if (len(left_path) > len(right_path)) & (rootNode.depth < (len(left_path) + len(right_path))):\n",
+    "    if (len(left_path) > len(right_path)) & (rootNode.depth == (len(left_path) + len(right_path))):\n",
     "        print(\"Cross over\")\n",
-    "        right_path.append(rootNode.self.right)\n",
+    "        for node in right_path:\n",
+    "            left_path.append(node)\n",
     "\n",
     "    # compare the lengths of each sub path and add the longer\n",
     "    if len(left_path) > len(right_path):\n",
@@ -775,7 +779,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 252,
+   "id": "a8b60c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getLongestPathLength(rootNode):\n",
+    "    # rootNode is an instance of the TreeNode class\n",
+    "    # The function must return the longest path length\n",
+    "    # your code here\n",
+    "\n",
+    "    class Height:\n",
+    "        def _init_(self):\n",
+    "            self.h = 0\n",
+    " \n",
+    "    def findLongestPath(rootNode, height):\n",
+    "    \n",
+    "        # Height of a path is equal to the number of nodes along that path.\n",
+    "        left_height = Height()\n",
+    "        right_height = Height()\n",
+    "    \n",
+    "        # base condition- when binary tree is empty\n",
+    "        if rootNode is None:\n",
+    "            height.h = 0\n",
+    "            return 0\n",
+    "    \n",
+    "        # recursively find the longest path to the left and right of a node\n",
+    "        left_path = findLongestPath(rootNode.left, left_height)\n",
+    "        right_path = findLongestPath(rootNode.right, right_height)\n",
+    "    \n",
+    "        height.h = max(left_height.h, right_height.h) + 1\n",
+    "    \n",
+    "        # return maximum of the following\n",
+    "        # Case 1 - left subtree\n",
+    "        # Case 2 - right subtree\n",
+    "        # Case 3 - Cross-over (left_height + right_height + node)\n",
+    "        return max(left_height.h + right_height.h + 1, max(left_path, right_path))\n",
+    "\n",
+    "    height = Height()\n",
+    "    return findLongestPath(rootNode, height)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -797,48 +845,15 @@
      "output_type": "stream",
      "text": [
       "-- Test 1 --\n",
-      "root.node: 70, root.depth: 1\n",
-      "left_path: [], right_path: [70]\n",
-      "Return right_path\n",
-      "root.node: 51, root.depth: 1\n",
-      "left_path: [], right_path: [51]\n",
-      "Return right_path\n",
-      "root.node: 50, root.depth: 2\n",
-      "left_path: [], right_path: [51, 50]\n",
-      "Return right_path\n",
-      "root.node: 52, root.depth: 3\n",
-      "left_path: [51, 50, 52], right_path: []\n",
-      "Return left_path\n",
-      "root.node: 43, root.depth: 1\n",
-      "left_path: [], right_path: [43]\n",
-      "Return right_path\n",
-      "root.node: 47, root.depth: 4\n",
-      "left_path: [43], right_path: [51, 50, 52, 47]\n",
-      "Return right_path\n",
-      "root.node: 10, root.depth: 1\n",
-      "left_path: [], right_path: [10]\n",
-      "Return right_path\n",
-      "root.node: 20, root.depth: 2\n",
-      "left_path: [10, 20], right_path: []\n",
-      "Return left_path\n",
-      "root.node: 40, root.depth: 5\n",
-      "left_path: [10, 20], right_path: [51, 50, 52, 47, 40]\n",
-      "Return right_path\n",
-      "root.node: 55, root.depth: 6\n",
-      "left_path: [51, 50, 52, 47, 40, 55], right_path: [70]\n",
-      "Return left_path\n",
-      "[51, 50, 52, 47, 40, 55]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[206], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m path_len \u001b[39m=\u001b[39m getLongestPathLength(r)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(path_len)\n\u001b[1;32m---> 13\u001b[0m \u001b[39massert\u001b[39;00m path_len \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpassed\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 2 --\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+      "7\n",
+      "passed\n",
+      "-- Test 2 --\n",
+      "7\n",
+      "-- Test 3 --\n",
+      "10\n",
+      "-- Test 4--\n",
+      "9\n",
+      "All Tests Passed: 15 points!\n"
      ]
     }
    ],
